--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
+    "body-parser": "^1.20.2",
+    "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
