--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
